<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#150B09"
    tools:context="com.overne.examen.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:textColor="#47C3EB"
                android:textSize="60dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nompart"
                android:textColor="#A29D9C"
                android:textSize="22dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomgrad"
                android:textColor="#A29D9C"
                android:textSize="22dp"
                />

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"

            />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp"
    android:weightSum="1">
    <ImageView
        android:layout_width="38dp"
        android:layout_height="47dp"
        android:src="@drawable/ic_launcherd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nom9"
            android:gravity="center"
            android:textColor="#A29D9C"
            android:textSize="20dp"
            android:layout_weight="0.00" />

        <ImageView
            android:layout_width="46dp"
            android:layout_height="47dp"
            android:src="@drawable/ic_launcherd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nom45"
            android:gravity="center"
            android:textColor="#A29D9C"
            android:textSize="20dp" />
        <ImageView
            android:layout_width="38dp"
            android:layout_height="47dp"
            android:src="@drawable/ic_launcherew" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nom48"
            android:gravity="center"
            android:textColor="#A29D9C"
            android:textSize="20dp"
            android:layout_weight="0.05" />



</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/nom2"
            android:textColor="#A29D9C"
            android:textSize="14dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

       <LinearLayout
           android:layout_width="94dp"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/nom3"
               android:textColor="#FDFEFE"
               android:padding="5dp"
               android:gravity="center"
               android:textSize="19dp"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/nom4"
               android:gravity="center"
               android:textColor="#47C3EB"
               android:padding="5dp"
               android:textSize="20dp"
               />
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="82dp"
               android:src="@drawable/ic_launcher3"

               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/nom6"
               android:layout_gravity="center"
               android:textColor="#A29D9C"
               android:textSize="13dp"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/nom8"
               android:layout_gravity="center"
               android:textColor="#A29D9C"
               android:textSize="13dp"
               />
       </LinearLayout>

        <LinearLayout
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom12"
                android:textColor="#FDFEFE"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="19dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom4"
                android:gravity="center"
                android:textColor="#47C3EB"
                android:padding="5dp"
                android:textSize="20dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:src="@drawable/ic_launcher"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name1"
                android:layout_gravity="center"
                android:textColor="#A29D9C"
                android:textSize="13dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name2"
                android:layout_gravity="center"
                android:textColor="#A29D9C"
                android:textSize="13dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom13"
                android:textColor="#FDFEFE"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="19dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom4"
                android:gravity="center"
                android:textColor="#47C3EB"
                android:padding="5dp"
                android:textSize="20dp"
                />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="82dp"

                android:src="@drawable/ic_launcher3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name1"
                android:layout_gravity="center"
                android:textColor="#A29D9C"
                android:textSize="13dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name2"
                android:layout_gravity="center"
                android:textColor="#A29D9C"
                android:textSize="13dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom14"
                android:textColor="#FDFEFE"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="19dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom4"
                android:gravity="center"
                android:textColor="#47C3EB"
                android:padding="5dp"
                android:textSize="20dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:src="@drawable/ic_launcher"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name1"
                android:layout_gravity="center"
                android:textColor="#A29D9C"
                android:textSize="13dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name2"
                android:layout_gravity="center"
                android:textColor="#A29D9C"
                android:textSize="13dp"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

</RelativeLayout>
